# performer

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  DESIGNDOCUMENT.md  Gemfile  LICENSE  Makefile  README.md  Vagrantfile  _config.yml  copy-build-guide  copy-user-manual  index.md  setup-builds.sh
src/: CMakeLists.txt  Config.h  SystemConfig.h
src/apps/: CMakeLists.txt
src/apps/bootloader/: Bootloader.cpp  CMakeLists.txt  Canvas.cpp  Canvas.h  Config.h  Console.cpp  Console.h  Debug.h  Delay.h  Encoder.cpp  Encoder.h  FileSystem.cpp  FileSystem.h  Font.h  InterruptLock.h  Lcd.cpp  Lcd.h  MD5.cpp  MD5.h  SdCard.cpp  SdCard.h  System.cpp  System.h  UpdateFile.cpp  UpdateFile.h  VersionTag.h  bootloader.ld
src/apps/bootloader/lib/: stb_sprintf.c
src/apps/hwconfig/: CMakeLists.txt  HardwareConfig.h  hwconfig.c  hwconfig.ld  hwconfig_default.c  hwconfig_reversed_encoder.c
src/apps/sequencer/: CMakeLists.txt  Config.h  Sequencer.cpp  SequencerApp.h  SequencerSim.cpp  sequencer.cpp  sequencer.ld
src/apps/sequencer/asteroids/: Asteroids.cpp  Asteroids.h
src/apps/sequencer/engine/: ArpeggiatorEngine.cpp  ArpeggiatorEngine.h  CVInput.cpp  CVInput.h  CVOutput.cpp  CVOutput.h  Clock.cpp  Clock.h  Controller.cpp  Controller.h  CurveRecorder.h  CurveSequenceEngine.cpp  CurveSequenceEngine.h  CurveTrackEngine.cpp  CurveTrackEngine.h  CvGateToMidiConverter.h  CvInput.cpp  CvInput.h  CvOutput.cpp  CvOutput.h  Engine.cpp  Engine.h  EngineState.h  Groove.h  HarmonyTrackEngine.cpp  HarmonyTrackEngine.h  MIDIPort.h  MidiCvTrackEngine.cpp  MidiCvTrackEngine.h  MidiLearn.cpp  MidiLearn.h  MidiOutputEngine.cpp  MidiOutputEngine.h  MidiPort.h  MidiUtils.h  NoteSequenceEngine.cpp  NoteSequenceEngine.h  NoteTrackEngine.cpp  NoteTrackEngine.h  NudgeTempo.h  (+20 more)
src/apps/sequencer/intro/: Intro.cpp  Intro.h
src/apps/sequencer/model/: Arpeggiator.cpp  Arpeggiator.h  Bitfield.h  Calibration.cpp  Calibration.h  Chord.cpp  Chord.h  ClipBoard.cpp  ClipBoard.h  ClockSetup.cpp  ClockSetup.h  Curve.cpp  Curve.h  CurveSequence.cpp  CurveSequence.h  CurveTrack.cpp  CurveTrack.h  FileDefs.h  FileManager.cpp  FileManager.h  FlashReader.h  FlashWriter.h  HarmonySequence.cpp  HarmonySequence.h  HarmonyTrack.cpp  HarmonyTrack.h  KnownDivisor.h  MidiConfig.h  MidiCvTrack.cpp  MidiCvTrack.h  MidiOutput.cpp  MidiOutput.h  Model.cpp  Model.h  ModelUtils.cpp  ModelUtils.h  NoteSequence.cpp  NoteSequence.h  NoteTrack.cpp  NoteTrack.h  (+37 more)
src/apps/sequencer/python/: CMakeLists.txt  core.cpp  project.cpp  sequencer.cpp  simulator.cpp  testsim.cpp
src/apps/sequencer/tests/: .gitignore  manual-screenshots.py  runner.py
src/apps/sequencer/ui/: Controller.cpp  Controller.h  ControllerManager.cpp  ControllerManager.h  ControllerRegistry.h  Event.h  Key.h  KeyPressEventTracker.h  LedPainter.cpp  LedPainter.h  Leds.h  MatrixMap.h  MessageManager.cpp  MessageManager.h  Page.cpp  Page.h  PageKeyMap.h  PageManager.cpp  PageManager.h  Screensaver.cpp  Screensaver.h  StepSelection.h  UI.cpp  UI.h  Ui.cpp  Ui.h
src/apps/tester/: CMakeLists.txt  LogBuffer.h  Tester.cpp  tester.ld  tester_standalone.ld
src/core/: Debug.cpp  Debug.h
src/core/fs/: Directory.h  Error.cpp  Error.h  File.cpp  File.h  FileInfo.h  FileReader.h  FileSystem.cpp  FileSystem.h  FileWriter.h  Volume.cpp  Volume.h
src/core/gfx/: Blit.h  Brightness.h  Canvas.cpp  Canvas.h  FrameBuffer.h
src/core/gfx/fonts/: BitmapFont.h  ati8x8.h  commodore.h  small_pixel.h  tiny5x5.h  tiny_5x5.h
src/core/hash/: FnvHash.h
src/core/io/: SerializedReader.h  SerializedWriter.h  VersionedSerializedReader.h  VersionedSerializedWriter.h
src/core/math/: Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  Math.cpp  Math.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
src/core/midi/: MIDIMessage.cpp  MIDIMessage.h  MIDIParser.cpp  MIDIParser.h  MidiMessage.cpp  MidiMessage.h  MidiParser.cpp  MidiParser.h
src/core/profiler/: Profiler.cpp  Profiler.h
src/core/utils/: Container.h  Debouncer.h  EnumUtils.h  MovingAverage.h  ObjectPool.h  Random.h  RingBuffer.h  StringBuilder.h  StringUtils.h
src/engine/: Clock.cpp  Clock.h  Controller.cpp  Controller.h  Engine.cpp  Engine.h  Sequence.h  SortedQueue.h  Track.cpp  Track.h
src/libs/ff/: ffconf.h
src/libs/stb/: stb_sprintf.c
src/libs/tinyprintf/: LICENSE  README.md  printf-c.cc  test.cc
src/model/: Model.h  Pattern.h  Project.h  Sequence.h  Settings.h
src/os/: LockGuard.h
src/platform/sim/: CMakeLists.txt  Platform.h
src/platform/sim/drivers/: ADC.cpp  ADC.h  Adc.h  ButtonLedMatrix.cpp  ButtonLedMatrix.h  ClockTimer.h  Console.cpp  Console.h  DAC.h  DIO.cpp  DIO.h  Dac.h  DebugPin.h  Dio.cpp  Dio.h  Encoder.cpp  Encoder.h  Flash.h  GateOutput.h  HighResolutionTimer.h  LCD.h  Lcd.h  MIDI.h  Midi.h  SDCard.h  SdCard.h  USBMIDI.h  UsbMidi.h
src/platform/sim/os/: Atomic.h  os.cpp  os.h
src/platform/sim/sim/: Audio.cpp  Audio.h  Common.h  DrumKit.cpp  DrumKit.h  EncoderEvent.h  Event.h  FrameBuffer.h  Instrument.h  InstrumentSetup.cpp  InstrumentSetup.h  MIDI.cpp  MIDI.h  Midi.cpp  Midi.h  MidiConfig.h  MidiEvent.h  Renderer.h  Simulator.cpp  Simulator.h  Target.h  TargetConfig.h  TargetState.h  TargetStateTracker.cpp  TargetStateTracker.h  TargetTrace.cpp  TargetTrace.h  TargetTracePlayer.cpp  TargetTracePlayer.h  TargetUtils.h  (+7 more)
src/platform/stm32/: CMakeLists.txt  FreeRTOSConfig.h  Platform.h  stm32f405.ld  stm32f429-nucleo.ld
src/test/: IntegrationTest.h  Timer.h  UnitTest.h
src/tests/: CMakeLists.txt
src/tests/drivers/: TestADC.cpp  TestButtonLedMatrix.cpp  TestDAC.cpp  TestMIDI.cpp  TestSDCard.cpp
src/tests/fs/: TestFileSystem.cpp
src/tests/integration/: CMakeLists.txt  IntegrationTest.h
src/tests/unit/: CMakeLists.txt  UnitTest.h
src/ui/: Event.h  Key.h  Keys.h  LedPainter.cpp  LedPainter.h  Leds.h  Page.cpp  Page.h  UI.cpp  UI.h
src/ui/pages/: MainPage.cpp  MainPage.h  MutePage.cpp  MutePage.h  PageContext.h  Pages.h  SequenceSetupPage.h  TopPage.cpp  TopPage.h  TrackPage.cpp  TrackPage.h  ValuePage.h
src/ui/painters/: WindowPainter.cpp  WindowPainter.h
(+378 files in other folders)
