if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
    set(rtmidi_libs winmm)
    set(rtmidi_defs __WINDOWS_MM__)
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    find_library(coreaudio_lib CoreAudio)
    find_library(coremidi_lib CoreMIDI)
    find_library(corefoundation_lib CoreFoundation)
    find_library(audiotoolbox_lib AudioToolbox)
    find_library(audiounit_lib AudioUnit)
    set(rtmidi_libs ${coreaudio_lib} ${coremidi_lib} ${corefoundation_lib} ${audiotoolbox_lib} ${audiounit_lib})
    set(rtmidi_defs __MACOSX_AU__ __MACOSX_CORE__)
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    find_package(ALSA REQUIRED)
    set(rtmidi_libs ${ALSA_LIBRARY} pthread)
    set(rtmidi_defs __LINUX_ALSA__)
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
else()
    message(FATAL_ERROR "Unknown platform.")
endif()

add_library(rtmidi RtMidi.h RtMidi.cpp)

target_link_libraries(rtmidi ${rtmidi_libs})
target_compile_definitions(rtmidi PUBLIC ${rtmidi_defs})
